fix: contrast ratio

--- a/css/styles.css
+++ b/css/styles.css
@@ -18,8 +18,7 @@ ul, li {
 	color: #333;
 }
 a {
-  /*color: orange;*/
-  color: #ff9292;
+  	color: #4f4f4f;
 	text-decoration: none;
 }
 a:hover, a:focus {
@@ -119,7 +118,7 @@ nav h1 a {
   align-items: center;
 }
 .filter-options h2 {
-  color: white;
+  color: #242424;
   font-size: 1rem;
   font-weight: normal;
   line-height: 1;
